<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#754C31">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/akhdan" />

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/foto"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:elevation="12dp"
                android:padding="20dp"
                android:text="@string/nama"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_nim"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:layout_below="@id/txt_nama"
                android:text="@string/nim"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txt_kelas"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:layout_below="@id/txt_nim"
                android:text="@string/kelas"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:layout_below="@id/txt_kelas"
                android:text="@string/email"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txt_matkul"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:layout_below="@id/txt_email"
                android:text="@string/matkul"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txt_unikom"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:layout_below="@id/txt_matkul"
                android:text="@string/unikom"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>

    </RelativeLayout>